# plw-pytest

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pici.yml
tests/: test_clear_completed_button.py  test_counter.py  test_editing.py  test_item.py  utils.py
